[metadata]
name = QuantGYMM
version = 0.01
author = Gianluca Broll
author_email = gianluca.broll@gmail.com
description = For dealing with bond pricing and hedging. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GianlucaBroll95/QuantGYMM
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True